--- a/strings_factors.Rmd
+++ b/strings_factors.Rmd
@@ -170,6 +170,73 @@ marj_df |>
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
 
+## NYC Restaurant Inspections 
+
+```{r}
+data("rest_inspec")
+
+head(rest_inspec)
+
+```
+
+```{r}
+rest_inspec |> 
+  group_by(boro, grade) |> 
+  summarize(n = n()) |> 
+  pivot_wider(names_from = grade, values_from = n)
+```
+
+can mutate so responses are all upper case or lower case
+```{r}
+inspection_df =
+  rest_inspec |>
+  filter(grade %in% c("A", "B", "C"), boro != "Missing") |> 
+  mutate(boro = str_to_title(boro),
+         dba = str_to_upper(dba))
+```
+
+dba is restaurant name column
+pizza places
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  count(boro)
+```
+
+automatically plotted alphabetically even though Manhattan was the first entry
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+```
+
+most frequnetly observed(order by number of observations)
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  mutate(boro = forcats::fct_infreq(boro)) |> 
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+```
+
+can't add a factor level that does not exist
+could do fct_recode to do some relabelling
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  mutate(boro = forcats::fct_infreq(boro),
+         boro = fct_recode(boro, "The City" = "Manhattan")) |> 
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+```
+
+determining reference category
+
+```{r}
+
+```
+
 
 
 
